[package]
name = "rust-bfa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
futures = "0.3.16"
reqwest = "0.11.4"
itertools = "0.10.1"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["rc"] }
